--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@tiptap/extension-link": "^2.1.7",
     "@tiptap/react": "^2.1.7",
     "@tiptap/starter-kit": "^2.1.7",
+    "axios": "^1.5.0",
     "dayjs": "^1.11.9",
     "embla-carousel-react": "^7.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-if": "^4.1.5",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
@@ -57,5 +61,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios).+\\.js$"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)?$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy",
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
